; ModuleID = '/home/carl/AnghaBench/git/extr_packfile.c_in_window.c'
source_filename = "/home/carl/AnghaBench/git/extr_packfile.c_in_window.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }
%struct.pack_window = type { i64, i64 }

@the_hash_algo = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pack_window*, i64)* @in_window to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @in_window(%struct.pack_window* %0, i64 %1) #0 {
  %3 = alloca %struct.pack_window*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store %struct.pack_window* %0, %struct.pack_window** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load %struct.pack_window*, %struct.pack_window** %3, align 8
  %7 = getelementptr inbounds %struct.pack_window, %struct.pack_window* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  store i64 %8, i64* %5, align 8
  %9 = load i64, i64* %5, align 8
  %10 = load i64, i64* %4, align 8
  %11 = icmp sle i64 %9, %10
  br i1 %11, label %12, label %24

12:                                               ; preds = %2
  %13 = load i64, i64* %4, align 8
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** @the_hash_algo, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = add nsw i64 %13, %16
  %18 = load i64, i64* %5, align 8
  %19 = load %struct.pack_window*, %struct.pack_window** %3, align 8
  %20 = getelementptr inbounds %struct.pack_window, %struct.pack_window* %19, i32 0, i32 1
  %21 = load i64, i64* %20, align 8
  %22 = add nsw i64 %18, %21
  %23 = icmp sle i64 %17, %22
  br label %24

24:                                               ; preds = %12, %2
  %25 = phi i1 [ false, %2 ], [ %23, %12 ]
  %26 = zext i1 %25 to i32
  ret i32 %26
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
